# MusicPlaycnt

./: .clang-format  .gitignore  0001-solution1.patch  CMakeLists.txt  EvolutionIdeas.txt  Readme.txt  main.cpp
Res/: MusicPlaycnt2VViews.natvis  notification_sink_wintoast.cc  resource.hpp  tray.rc  warning_notification_windows_msgbox_only.cc
exe_only_src/: main.cc  production_accessor.cc  production_accessor.hpp
scripts/: cmake_generate_vs_vcpkg.bat  launcher.vbs  load_vcvarsall.bat  run_sh_vcvarsall.bat  util_find_lib_custom.cmake  vsvars.ps1  write_variables.cmake
scripts/libs/: NonFunctional__install_gtest.sh  install_platformdirs.sh  install_plog.sh
src/: main.cc  main.cpp  ostream_logging.cc  ostream_logging.hpp
src/data/: accessor.cc  accessor.hpp  cached_hard_drive.cc  cached_hard_drive.hpp  legacy_json_importer.cc  legacy_json_importer.hpp  pointers_to_globals.hpp
src/misc/: consts.hpp  custom_include_spdlog.hpp  notification_sink.hpp  open_wrap.hpp  plog_util.cc  plog_util.hpp  protobuf_read_write_disk.cc  protobuf_read_write_disk.hpp  read_line_reverse.cc  read_line_reverse.hpp  spd_logging.cc  spd_logging.hpp  spdlog_colorful_sink_factory_singleton.cc  utilities.cc  utilities.hpp  utiltime.hpp
src/model/: action_type.cc  action_type.hpp  app_config.cc  app_config.hpp  serializable.cc  serializable.hpp  song.cc  song.hpp  song_list.cc  song_list.hpp  song_with_metadata.cc  song_with_metadata.hpp
src/musicstuff/: do_things.cc  do_things.hpp  foo_np_log_parser.cc  foo_np_log_parser.hpp
src/protobufs/: app_config.proto  songs.proto
src/test_plog_wtf/: plog_util.hpp
src/tray/: listener.cc  listener.hpp  listener_threaded_outdated.cc  listener_threaded_outdated.hpp  tray.cc  tray.hpp
src/win/: encoding.cc  encoding.hpp  prototype_msdn_listener.cc  winapi_exceptions.cc  winapi_exceptions.hpp  windows_error_format.cc  windows_error_format.hpp  windows_headers.hpp
temporary_out_src/misc/: spdlog_colorful_sink_factory_singleton.cc
test/: flow_tests.hpp  gtest_project.cmake  persistence_test.hpp  tests_main.cc  tests_main.hpp
test/util/: data_for_tests.hpp  string_provider.hpp  tests_accessor.cc  tests_accessor.hpp  tests_util_functions.hpp
